<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Height"
        android:textColor="#000"
        android:textAlignment="center"/>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAlignment="center"
        android:autofillHints="dd"
        android:id="@id/editTextNumber"
        android:labelFor="@id/editTextNumber"/>

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Weight"
        android:textColor="#000"
        android:textAlignment="center"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:autofillHints="testtrest"/>

    <Button
        android:layout_marginTop="50dp"
        android:text="@string/Confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>